加入中油一键的报表数据源sql文件

--- a/src/test/resources/config/report.properties
+++ b/src/test/resources/config/report.properties
@@ -1,16 +1,16 @@
 ########--报表对象-------#
 #--------管道-------#
-pd=view_pipeline
+pd=reportSQL_pipeline.sql
 
 #--------焊缝-------#
-w=view_weld
+w=reportSQL_weld.sql
 
 #--------焊工-------#
 #wr=view_welder
 wr=reportSQL_welder.sql
 
 #--------无损检测委托-------#
-ne=view_ndeEntrust
+ne=reportSQL_nde.sql
 
 #--------热处理委托-------#
-he=view_htEntrust
+he=reportSQL_ht.sql
