--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.fulong.tool</groupId>
 	<artifactId>tool-common</artifactId>
-	<!-- <version>2.1.6</version> -->
-	<version>2.1.7-SNAPSHOT</version>
+	<version>2.2.1</version>
+	<!-- <version>2.2.1-SNAPSHOT</version> -->
 	<packaging>jar</packaging>
 	<name>jx</name>
 	<description>jx</description>
