--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>xu.jiang.violet</groupId>
-	<artifactId>core</artifactId>
-	<version>0.1.0</version>
+	<groupId>xu.jiang.report</groupId>
+	<artifactId>violet</artifactId>
+	<version>0.1.1</version>
 	<!-- <version>2.2.1-SNAPSHOT</version> -->
 	<packaging>jar</packaging>
 	<name>jx</name>
