--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 
 		<!-- 将jar 发布到github上。 此处配置的名称要和maven配置文件对应的serverId一致 -->
 		<github.global.server>github</github.global.server>
-		<jedis.version>3.0.0</jedis.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -279,25 +279,23 @@
 			</plugin>
 			
 			<!-- 部署到远端github仓库的插件: -->
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-				<version>0.12</version>
-				<configuration>
-					<message>Maven artifacts for
-						${project.artifactId}-${project.version}</message>
-					<noJekyll>true</noJekyll>
+			 <plugin>
+		      <groupId>com.github.github</groupId>
+		      <artifactId>site-maven-plugin</artifactId>
+		      <version>0.12</version>
+		      <configuration>
+		        <message>Creating site for ${project.version}</message>
+		        <noJekyll>true</noJekyll>
 					<!-- 指定从哪里去取打好的包，并上传至github -->
 					<outputDirectory>${project.build.directory}/maven-repository</outputDirectory>
 					<!-- 指定要上传的分支, refs/heads 这个不变，后面的分支名可选，可以采取一个jar包使用一个分支的策略。 若多个jar包同时发布在同一个分支的话，会覆盖。。。。 -->
-					<branch>refs/heads/develop</branch>
-					<!--  -->
-				<!-- 	<merge>true</merge> -->
-					<dryRun>true</dryRun>
+					<branch>refs/heads/master</branch>
 					<!-- 包含outputDirectory标签内填的文件夹中的所有内容 -->
+					<merge>true</merge>
 					<includes>
 						<include>**/*</include>
 					</includes>
+					
 					<!-- github远程存储outputDirectory标签内填的文件夹中的内容 -->
 					<repositoryName>maven-repository</repositoryName>
 					<!-- github的用户名，注意不是登录的用户名，此项需要登录后，进入https://github.com/settings/profile页面配置Name属性， 
@@ -306,17 +304,17 @@
 						For 'properties/name', nil is not a string. [ERROR] For 'properties/name', 
 						nil is not a string. (422) [ERROR] -> [Help 1] 的错误 -->
 					<repositoryOwner>rainyspring</repositoryOwner>
-				</configuration>
-
-				<executions>
-					<execution>
-						<goals>
-							<goal>site</goal>
-						</goals>
-						<phase>deploy</phase>
-					</execution>
-				</executions>
-			</plugin>
+		      </configuration>
+		      <executions>
+		        <execution>
+		          <goals>
+		            <goal>site</goal>
+		          </goals>
+		          <phase>deploy</phase>
+		        </execution>
+		      </executions>
+		    </plugin>
+				
 
 
 		</plugins>
